test/libsolidity/syntaxTests/parsing/tuples_without_commas.sol
contract C {
	function f() {
		var a = (2 2);
	}
}
// ----
// ParserError: (42-43): Expected ',' but got 'Number'
